<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />


    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/building_list_search_container"
        android:padding="16dp"
        android:paddingTop="0dp"
        android:elevation="4dp"
        android:background="@color/primary"
        android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/building_list_search_box"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:layout_gravity="start|center_vertical"
            android:background="@android:color/transparent"
            android:drawableEnd="@drawable/ic_search"
            android:drawableRight="@drawable/ic_search"
            android:ellipsize="end"
            android:imeOptions="actionSearch|flagNoExtractUi"
            android:inputType="textFilter"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
    </androidx.cardview.widget.CardView>
    </FrameLayout>


    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/building_list_wotd"
                android:background="@android:color/white"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/building_list_wotd_image"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/handshape_3_4_1" />

                <TextView
                    android:id="@+id/building_list_wotd_gloss_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="8dp"
                    android:text="Word of the day"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/building_list_wotd_gloss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/building_list_wotd_gloss_label"
                    android:layout_toLeftOf="@id/building_list_wotd_image"
                    android:layout_toStartOf="@id/building_list_wotd_image"
                    android:text="head"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />


            </RelativeLayout>



            <!-- Bottom border -->
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#EEEEEE" />


            <WebView
                android:id="@+id/about_content"
                android:overScrollMode="never"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                />
        </LinearLayout>
    </ScrollView>


</LinearLayout>

