<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:id="@+id/action_favourites"
            android:icon="@drawable/ic_star_white_48dp"
            android:title="Favourites"
            app:showAsAction="always|withText" />
        <item
            android:id="@+id/action_search_mode_handshape"
            android:icon="@drawable/ic_action_handshape"
            android:title="Search by Handshape/Location"
            app:showAsAction="ifRoom"/>

        <item
            android:title="Search by Keyword"
            android:id="@+id/action_search_mode_keyword"
            android:icon="@drawable/ic_action_keyword"
            app:showAsAction="ifRoom"/>

</menu>