<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <include layout="@layout/toolbar" />1
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView android:id="@+id/gloss"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:background="#fff"
                android:maxLines="2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/minor"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="18sp"
                android:textColor="#000"
                android:background="#fff"
                android:maxLines="2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
            <TextView android:id="@+id/maori"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="18sp"
                android:textStyle="italic"
                android:textColor="#000"
                android:background="#fff"
                android:maxLines="2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <ImageView android:id="@+id/handshape"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#fff"
            android:scaleType="fitCenter" />
        <ImageView android:id="@+id/location"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="#fff"
            android:scaleType="fitCenter" />
    </LinearLayout>
    <VideoView android:id="@+id/video"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scaleType="fitCenter" />
</LinearLayout>
