<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ListView
        android:id="@+id/favourites"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:visibility="gone"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/empty_favourites"
       >

        <WebView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/empty_favourites_webview" />

    </LinearLayout>


</LinearLayout>
