<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:descendantFocusability="blocksDescendants"
    android:background="#fff">
    <ImageView android:id="@+id/diagram"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/hands"
        android:scaleType="fitEnd" />
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_gloss"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Three-line item"
            style="@style/Base.TextAppearance.AppCompat.Subhead">
        </TextView>
        <TextView
            android:id="@+id/item_maori"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Secondary text"
            android:textColor="@android:color/black"
            style="@style/Base.TextAppearance.AppCompat.Caption">
        </TextView>
        <TextView
            android:id="@+id/item_minor"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Secondary text"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:textStyle="italic">
        </TextView>
    </LinearLayout>

</LinearLayout>
